--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "vendor": "vtex",
-  "name": "store-theme",
+  "vendor": "valtech",
+  "name": "store-cookie-fortune",
   "version": "5.2.0",
   "builders": {
     "styles": "2.x",
@@ -62,7 +62,8 @@
     "vtex.product-specifications": "1.x",
     "vtex.tab-layout": "0.x",
     "vtex.condition-layout": "2.x",
-    "vtex.css-handles": "1.x"
+    "vtex.css-handles": "1.x",
+    "valtech.app-cookie-fortune": "0.x"
   },
   "peerDependencies": {
     "vtex.reviews-and-ratings": "3.x"
