--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -1,7 +1,8 @@
 {
   "store.home": {
     "blocks": [
-      "list-context.image-list#demo",
+      // "list-context.image-list#demo-cookies",
+      "link#cookie-fortune",
       /* You can make references to blocks defined in other files.
        * For example, `flex-layout.row#deals` is defined in the `deals.json` file. */
       "flex-layout.row#deals",
@@ -13,6 +14,23 @@
       "rich-text#link",
       "newsletter"
     ]
+  },
+
+  "link#cookie-fortune": {
+    "props": {
+      "href": "https://jaredcookiefortune--valtech.myvtex.com/cookie-fortune",
+      "openNewTab": false
+    },
+    "children": ["image#demo-cookies"]
+  },
+  "image#demo-cookies": {
+    "props": {
+      "blockClass": "cookie",
+      "src": "https://i.postimg.cc/k4MYRFmQ/galleta.png",
+      "mobileSrc": "https://i.postimg.cc/k4MYRFmQ/galleta.png",
+      "height": 570,
+      "preload": true
+    }
   },
 
   "list-context.image-list#demo": {
